other-mpol/add-ttl-jobs/add-ttl-jobs.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-ttl-jobs
  annotations:
    policies.kyverno.io/title: Add TTL to Jobs
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Job
    kyverno.io/kyverno-version: "1.15.0"
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      Jobs which are user created can often pile up and consume
      excess space in the cluster. In Kubernetes 1.23, the TTL-after-finished controller
      is stable and will automatically clean up these Jobs if the ttlSecondsAfterFinished
      is specified. This policy adds the ttlSecondsAfterFinished field to an Job that does
      not have an ownerReference set if not already specified.
spec:
  matchConstraints:
    resourceRules:
      - apiGroups: ["batch"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["jobs"]
  matchConditions:
    - name: Check if ttlSecondsAfterFinished is missing and ownerReferences is empty
      expression: "object.metadata.?ownerReferences.orValue([]).size() == 0 && !has(object.spec.ttlSecondsAfterFinished)"
  mutations:
    - patchType: JSONPatch
      jsonPatch:
        expression: |
          !has(object.spec.ttlSecondsAfterFinished) ?
            [
              JSONPatch{
                op: "add",
                path: "/spec/ttlSecondsAfterFinished",
                value: 900
              }
            ] : []
