other-mpol/add-ttl-jobs/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-ttl-jobs
policies:
- ../add-ttl-jobs.yaml
resources:
- resource.yaml
results:
- kind: Job
  patchedResources: patched01.yaml
  policy: add-ttl-jobs
  resources:
  - addjob01
  result: pass
  isMutatingPolicy: true
- kind: Job
  policy: add-ttl-jobs
  resources:
  - skipjob01
  - skipjob02
  result: skip
  isMutatingPolicy: true
- kind: Job
  patchedResources: patched02.yaml
  policy: add-ttl-jobs
  resources:
  - addjob02
  result: pass
  isMutatingPolicy: true
